# llmhere

./: .gitignore  CLAUDE.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: catalog.json
app/src/main/kotlin/dev/edgellm/: AppDependencies.kt  EdgeLlmApplication.kt  MainActivity.kt
app/src/main/kotlin/dev/edgellm/ui/components/: ChatHistoryDrawer.kt  MarkdownMessageBubble.kt  MessageBubbleShape.kt  ModelSelectorBottomSheet.kt
app/src/main/kotlin/dev/edgellm/ui/navigation/: Screen.kt
app/src/main/kotlin/dev/edgellm/ui/screens/: ChatScreen.kt  HomeScreen.kt  SettingsScreen.kt
app/src/main/kotlin/dev/edgellm/ui/theme/: Theme.kt
app/src/main/kotlin/dev/edgellm/viewmodel/: ChatViewModel.kt
app/src/test/kotlin/dev/edgellm/: AppDependenciesTest.kt
app/src/test/kotlin/dev/edgellm/viewmodel/: ChatViewModelTest.kt
core/data/: build.gradle.kts
core/data/src/main/kotlin/dev/edgellm/data/chat/: ChatRepository.kt  ChatSessionManager.kt  InMemoryChatRepository.kt  RoomChatRepository.kt
core/data/src/main/kotlin/dev/edgellm/data/device/: MemoryChecker.kt
core/data/src/main/kotlin/dev/edgellm/data/download/: DownloadManager.kt  DownloadProgress.kt  ModelDownloader.kt  OkHttpModelDownloader.kt
core/data/src/main/kotlin/dev/edgellm/data/model/: InMemoryInstalledModelRepository.kt  InstalledModelRepository.kt  ModelCatalog.kt  ModelImporter.kt
core/data/src/main/kotlin/dev/edgellm/data/settings/: DataStoreGenerationSettingsRepository.kt  GenerationSettings.kt  GenerationSettingsRepository.kt
core/data/src/test/kotlin/dev/edgellm/data/chat/: ChatRepositoryTest.kt  (+4 more)
core/data/src/test/resources/: catalog_malformed.json  catalog_valid.json
core/domain/: build.gradle.kts
core/engine/api/: build.gradle.kts
core/engine/llamacpp/: build.gradle.kts
core/engine/llamacpp/src/main/cpp/: CMakeLists.txt  edgellm_jni.cpp
docs/: ARCHITECTURE.md  MODEL_PIPELINE.md  SETUP.md  TECH_STACK.md  TESTING.md
gradle/: libs.versions.toml
patches/: README.md  llama.cpp-falcon_e-pretokenizer.patch
scripts/: native-tests.sh
(+57 files in other folders)
